fix: check product expired product batches